--- a/House Prices/HousePrices_Algorithm1.ipynb
+++ b/House Prices/HousePrices_Algorithm1.ipynb
@@ -241,8 +241,8 @@
    },
    "outputs": [],
    "source": [
-    "all_data = pd.concat((train.loc[:,'MSSubClass':'SaleCondition'],\n",
-    "                    test.loc[:,'MSSubClass':'SaleCondition']))"
+    "all_data = pd.concat((train.loc[:, 'MSSubClass':'SaleCondition'],\n",
+    "                      test.loc[:, 'MSSubClass':'SaleCondition']))"
    ]
   },
   {
@@ -278,9 +278,11 @@
     }
    ],
    "source": [
-    "matplotlib.rcParams['figure.figsize'] = (12.0,6.0)\n",
-    "prices = pd.DataFrame({'price':train['SalePrice'],\n",
-    "                     'log(price+1)':np.log1p(train['SalePrice'])})\n",
+    "matplotlib.rcParams['figure.figsize'] = (12.0, 6.0)\n",
+    "prices = pd.DataFrame({\n",
+    "    'price': train['SalePrice'],\n",
+    "    'log(price+1)': np.log1p(train['SalePrice'])\n",
+    "})\n",
     "prices.hist()"
    ]
   },
@@ -415,7 +417,7 @@
     }
    ],
    "source": [
-    "cv_ridge=pd.Series(cv_ridge,index=alphas)\n",
+    "cv_ridge = pd.Series(cv_ridge, index=alphas)\n",
     "cv_ridge.plot(title='Validation - Just Do It')\n",
     "plt.xlabel('alpha')\n",
     "plt.ylabel('rmse')"
@@ -567,8 +569,7 @@
     "#查看预测值和实际值残差\n",
     "matplotlib.rcParams['figure.figsize'] = (6.0, 6.0)\n",
     "\n",
-    "preds = pd.DataFrame({'preds': model_lasso.predict(x_train),\n",
-    "                      'true': y})\n",
+    "preds = pd.DataFrame({'preds': model_lasso.predict(x_train), 'true': y})\n",
     "preds['residuals'] = preds['true'] - preds['preds']\n",
     "preds.plot(x=\"preds\", y=\"residuals\", kind=\"scatter\")"
    ]
@@ -598,8 +599,7 @@
     "dtest = xgb.DMatrix(x_test)\n",
     "\n",
     "params = {'max_depth': 2, 'eta': 0.1}\n",
-    "model = xgb.cv(params, dtrain, num_boost_round=500,\n",
-    "               early_stopping_rounds=100)"
+    "model = xgb.cv(params, dtrain, num_boost_round=500, early_stopping_rounds=100)"
    ]
   },
   {
@@ -671,8 +671,8 @@
    },
    "outputs": [],
    "source": [
-    "xgb_preds=np.expm1(model_xgb.predict(x_test))\n",
-    "lasso_preds=np.expm1(model_lasso.predict(x_test))"
+    "xgb_preds = np.expm1(model_xgb.predict(x_test))\n",
+    "lasso_preds = np.expm1(model_lasso.predict(x_test))"
    ]
   },
   {
@@ -730,8 +730,8 @@
    },
    "outputs": [],
    "source": [
-    "solution = pd.DataFrame({'id':test.Id, 'SalePrice':preds})\n",
-    "solution.to_csv('ridge_sol.csv', index = False)"
+    "solution = pd.DataFrame({'id': test.Id, 'SalePrice': preds})\n",
+    "solution.to_csv('ridge_sol.csv', index=False)"
    ]
   },
   {
@@ -786,6 +786,7 @@
    "cell_type": "code",
    "execution_count": 59,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
