--- a/Quora/Quora_Algorithm1.ipynb
+++ b/Quora/Quora_Algorithm1.ipynb
@@ -541,6 +541,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    808580.000000\n",
+       "mean         59.860050\n",
+       "std          31.988383\n",
+       "min           1.000000\n",
+       "25%          39.000000\n",
+       "50%          51.000000\n",
+       "75%          72.000000\n",
+       "max        1169.000000\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# (df_train.is_duplicate[df_train.is_duplicate == 1]).sum()\n",
+    "# df_train.describe()\n",
+    "# (df_train.question2.apply(type) == float).value_counts()\n",
+    "# len(df_train.qid1.unique())\n",
+    "# len(df_train_num)\n",
+    "df_train_num.describe()\n",
+    "# df_train_word.describe()\n",
+    "# str(df_train.question1[1]).lower().split()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
    "outputs": [],
@@ -559,34 +594,6 @@
     "words = (''.join(train_qr)).lower().split()\n",
     "counts = Counter(words)\n",
     "weights = {word: get_weight(count) for word, count in counts.items()}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "float"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# (df_train.is_duplicate[df_train.is_duplicate == 1]).sum()\n",
-    "# df_train.describe()\n",
-    "# (df_train.question2.apply(type) == float).value_counts()\n",
-    "# len(df_train.qid1.unique())\n",
-    "# len(df_train_num)\n",
-    "df_train_num.describe()\n",
-    "# df_train_word.describe()\n",
-    "# str(df_train.question1[1]).lower().split()\n",
-    "2.5891040146646852e-06 "
    ]
   },
   {
@@ -626,7 +633,7 @@
    ],
    "source": [
     "print('Most common words and weights: ')\n",
-    "print(sorted(weights.items(), key=lambda x: x[1] if x[1] > 0.0 else 9999.0)[:10])\n",
+    "print(sorted(weights.items(), key=lambda x: x[1] if x[1] > 0 else 9999)[:10])\n",
     "print('\\nLeast common words and weights: ')\n",
     "(sorted(weights.items(), key=lambda x: x[1], reverse=True)[:10])"
    ]
