--- a/NLP Participle/Participle.ipynb
+++ b/NLP Participle/Participle.ipynb
@@ -2,10 +2,170 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import pickle\n",
+    "import time\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "pd.set_option('display.max_columns', None)\n",
+    "\n",
+    "%matplotlib inline\n",
+    "\n",
+    "#每次可以输出多个变量\n",
+    "from IPython.core.interactiveshell import InteractiveShell\n",
+    "InteractiveShell.ast_node_interactivity = \"all\"\n",
+    "\n",
+    "#屏蔽warning\n",
+    "import warnings\n",
+    "warnings.simplefilter(\"ignore\")\n",
+    "\n",
+    "from pylab import rcParams\n",
+    "rcParams['figure.figsize'] = 14, 6\n",
+    "\n",
+    "#中文字体\n",
+    "import matplotlib\n",
+    "matplotlib.use('qt4agg')\n",
+    "#指定默认字体\n",
+    "matplotlib.rcParams['font.sans-serif'] = ['SimHei']\n",
+    "matplotlib.rcParams['font.family'] = 'sans-serif'\n",
+    "#解决负号'-'显示为方块的问题\n",
+    "matplotlib.rcParams['axes.unicode_minus'] = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from collections import defaultdict, Counter\n",
+    "import ast"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {
+    "code_folding": []
+   },
+   "outputs": [],
+   "source": [
+    "file = open('./北大(人民日报)语料库199801.txt', 'rb')\n",
+    "dic = defaultdict(lambda: defaultdict(lambda: 0))\n",
+    "\n",
+    "for line in file:\n",
+    "    line = line.decode('utf-8')[23:].split('  ')\n",
+    "    for item in line:\n",
+    "        item = item.split('/')\n",
+    "        if (len(item) == 2):\n",
+    "            dic[item[0]][item[1]] += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "56481"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(dic)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "file = open('./北大(人民日报)语料库199801.txt', 'rb')\n",
+    "dic_2gram = defaultdict(lambda: defaultdict(lambda: 0))\n",
+    "\n",
+    "for line in file:\n",
+    "    line = line.decode('utf-8')[23:].split('  ')\n",
+    "    pre = ''\n",
+    "    for item in line:\n",
+    "        item = item.split('/')\n",
+    "        if (len(item) == 2):\n",
+    "            dic_2gram[item[0]][pre] += 1\n",
+    "            pre = item[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "56481"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(dic_2gram)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dic_2gram_new = defaultdict(lambda: defaultdict(lambda: 0))\n",
+    "\n",
+    "for key, value in dic_2gram.items():\n",
+    "    temp = ast.literal_eval(str(Counter(value))[8:-1])\n",
+    "    s = sum(temp.values())\n",
+    "    for k, v in temp.items():\n",
+    "        temp[k] = v / s\n",
+    "    dic_2gram_new[key] = temp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "56481"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(dic_2gram_new)"
+   ]
   }
  ],
  "metadata": {
