--- a/ALiMaMa/FeaturesWithoutHistory.ipynb
+++ b/ALiMaMa/FeaturesWithoutHistory.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false
    },
@@ -47,10 +47,10 @@
     {
      "data": {
       "text/plain": [
-       "(478111, 27)"
+       "(478138, 27)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -331,7 +331,7 @@
        "4                 1.0                  1.0                     1.0         0  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -341,7 +341,7 @@
        "(18371, 26)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -616,37 +616,35 @@
        "4            0.963794             0.964225                0.959134  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df = pd.read_csv('df.txt', sep=' ')\n",
-    "df = df.drop_duplicates()\n",
+    "test = pd.read_csv('test.txt', sep=' ')\n",
     "\n",
     "df.shape\n",
-    "df.head()"
+    "df.head()\n",
+    "test.shape\n",
+    "test.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test = pd.read_csv('test.txt', sep=' ')\n",
-    "\n",
-    "test.shape\n",
-    "test.head()\n",
-    "\n",
     "test['is_trade'] = -1\n",
+    "\n",
     "df = pd.concat([df, test])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -683,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -698,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -720,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -791,16 +789,29 @@
     "df['item_pred_category_score'] = df.apply(item_pred_category_score, axis=1)\n",
     "df['item_pred_property_score'] = df.apply(item_pred_property_score, axis=1)\n",
     "\n",
-    "df['item_pred_category_score_item%'] = df.item_pred_category_score / df.item_category_split_count\n",
-    "df['item_pred_property_score_item%'] = df.item_pred_property_score / df.item_property_split_count\n",
+    "df['item_pred_category_score_item%'] = df.item_pred_category_score / (\n",
+    "    df.item_category_split_count + 1) * 10\n",
+    "df['item_pred_property_score_item%'] = df.item_pred_property_score / (\n",
+    "    df.item_property_split_count + 1) * 10\n",
     "\n",
-    "df['item_pred_category_score_pred%'] = df.item_pred_category_score / df.pred_category_split_count\n",
-    "df['item_pred_property_score_pred%'] = df.item_pred_property_score / df.pred_property_split_count"
+    "df['item_pred_category_score_pred%'] = df.item_pred_category_score / (\n",
+    "    df.pred_category_split_count + 1) * 10\n",
+    "df['item_pred_property_score_pred%'] = df.item_pred_property_score / (\n",
+    "    df.pred_property_split_count + 1) * 10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('df_without_his.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
@@ -808,10 +819,10 @@
     {
      "data": {
       "text/plain": [
-       "(478111, 52)"
+       "(496509, 52)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -929,11 +940,11 @@
        "      <td>59</td>\n",
        "      <td>19.666667</td>\n",
        "      <td>3.277778</td>\n",
-       "      <td>[5799347067982556520:-1, 509660095530134768:-1...</td>\n",
-       "      <td>[5799347067982556520, 509660095530134768, 5755...</td>\n",
-       "      <td>[9148482949976129397]</td>\n",
-       "      <td>[7908382889764677758, 5799347067982556520]</td>\n",
-       "      <td>[2072967855524022579, 5131280576272319091, 263...</td>\n",
+       "      <td>['5799347067982556520:-1', '509660095530134768...</td>\n",
+       "      <td>['5799347067982556520', '509660095530134768', ...</td>\n",
+       "      <td>['9148482949976129397']</td>\n",
+       "      <td>['7908382889764677758', '5799347067982556520']</td>\n",
+       "      <td>['2072967855524022579', '5131280576272319091',...</td>\n",
        "      <td>2</td>\n",
        "      <td>22</td>\n",
        "      <td>5</td>\n",
@@ -941,9 +952,9 @@
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>6.666667</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.400000</td>\n",
+       "      <td>3.333333</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -984,11 +995,11 @@
        "      <td>59</td>\n",
        "      <td>19.666667</td>\n",
        "      <td>19.666667</td>\n",
-       "      <td>[5799347067982556520:9172976955054793469, 7908...</td>\n",
-       "      <td>[5799347067982556520, 7908382889764677758]</td>\n",
-       "      <td>[9172976955054793469, 1787573075717641245,9172...</td>\n",
-       "      <td>[7908382889764677758, 5799347067982556520]</td>\n",
-       "      <td>[2072967855524022579, 5131280576272319091, 263...</td>\n",
+       "      <td>['5799347067982556520:9172976955054793469', '7...</td>\n",
+       "      <td>['5799347067982556520', '7908382889764677758']</td>\n",
+       "      <td>['9172976955054793469', '1787573075717641245,9...</td>\n",
+       "      <td>['7908382889764677758', '5799347067982556520']</td>\n",
+       "      <td>['2072967855524022579', '5131280576272319091',...</td>\n",
        "      <td>2</td>\n",
        "      <td>22</td>\n",
        "      <td>2</td>\n",
@@ -996,10 +1007,10 @@
        "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.045455</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.500000</td>\n",
+       "      <td>6.666667</td>\n",
+       "      <td>0.434783</td>\n",
+       "      <td>6.666667</td>\n",
+       "      <td>3.333333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1039,11 +1050,11 @@
        "      <td>59</td>\n",
        "      <td>19.666667</td>\n",
        "      <td>19.666667</td>\n",
-       "      <td>[5799347067982556520:5131280576272319091, 7258...</td>\n",
-       "      <td>[5799347067982556520, 7258015885215914736, 790...</td>\n",
-       "      <td>[5131280576272319091, 5131280576272319091, 513...</td>\n",
-       "      <td>[7908382889764677758, 5799347067982556520]</td>\n",
-       "      <td>[2072967855524022579, 5131280576272319091, 263...</td>\n",
+       "      <td>['5799347067982556520:5131280576272319091', '7...</td>\n",
+       "      <td>['5799347067982556520', '7258015885215914736',...</td>\n",
+       "      <td>['5131280576272319091', '5131280576272319091',...</td>\n",
+       "      <td>['7908382889764677758', '5799347067982556520']</td>\n",
+       "      <td>['2072967855524022579', '5131280576272319091',...</td>\n",
        "      <td>2</td>\n",
        "      <td>22</td>\n",
        "      <td>3</td>\n",
@@ -1051,10 +1062,10 @@
        "      <td>3</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.045455</td>\n",
-       "      <td>0.666667</td>\n",
-       "      <td>0.333333</td>\n",
+       "      <td>6.666667</td>\n",
+       "      <td>0.434783</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>2.500000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1094,11 +1105,11 @@
        "      <td>59</td>\n",
        "      <td>19.666667</td>\n",
        "      <td>1.229167</td>\n",
-       "      <td>[509660095530134768:-1, 5799347067982556520:-1...</td>\n",
-       "      <td>[509660095530134768, 5799347067982556520, 7908...</td>\n",
-       "      <td>[1787573075717641245,9148482949976129397, 9148...</td>\n",
-       "      <td>[7908382889764677758, 5799347067982556520]</td>\n",
-       "      <td>[2072967855524022579, 5131280576272319091, 263...</td>\n",
+       "      <td>['509660095530134768:-1', '5799347067982556520...</td>\n",
+       "      <td>['509660095530134768', '5799347067982556520', ...</td>\n",
+       "      <td>['1787573075717641245,9148482949976129397', '9...</td>\n",
+       "      <td>['7908382889764677758', '5799347067982556520']</td>\n",
+       "      <td>['2072967855524022579', '5131280576272319091',...</td>\n",
        "      <td>2</td>\n",
        "      <td>22</td>\n",
        "      <td>5</td>\n",
@@ -1106,9 +1117,9 @@
        "      <td>3</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>6.666667</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.400000</td>\n",
+       "      <td>3.333333</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1149,11 +1160,11 @@
        "      <td>59</td>\n",
        "      <td>19.666667</td>\n",
        "      <td>19.666667</td>\n",
-       "      <td>[5799347067982556520:9172976955054793469, 7908...</td>\n",
-       "      <td>[5799347067982556520, 7908382889764677758]</td>\n",
-       "      <td>[9172976955054793469, 9172976955054793469]</td>\n",
-       "      <td>[7908382889764677758, 5799347067982556520]</td>\n",
-       "      <td>[2072967855524022579, 5131280576272319091, 263...</td>\n",
+       "      <td>['5799347067982556520:9172976955054793469', '7...</td>\n",
+       "      <td>['5799347067982556520', '7908382889764677758']</td>\n",
+       "      <td>['9172976955054793469', '9172976955054793469']</td>\n",
+       "      <td>['7908382889764677758', '5799347067982556520']</td>\n",
+       "      <td>['2072967855524022579', '5131280576272319091',...</td>\n",
        "      <td>2</td>\n",
        "      <td>22</td>\n",
        "      <td>2</td>\n",
@@ -1161,10 +1172,10 @@
        "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.045455</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.500000</td>\n",
+       "      <td>6.666667</td>\n",
+       "      <td>0.434783</td>\n",
+       "      <td>6.666667</td>\n",
+       "      <td>3.333333</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1256,39 +1267,39 @@
        "4         7.0          59    19.666667    19.666667   \n",
        "\n",
        "                     predict_category_property_split  \\\n",
-       "0  [5799347067982556520:-1, 509660095530134768:-1...   \n",
-       "1  [5799347067982556520:9172976955054793469, 7908...   \n",
-       "2  [5799347067982556520:5131280576272319091, 7258...   \n",
-       "3  [509660095530134768:-1, 5799347067982556520:-1...   \n",
-       "4  [5799347067982556520:9172976955054793469, 7908...   \n",
+       "0  ['5799347067982556520:-1', '509660095530134768...   \n",
+       "1  ['5799347067982556520:9172976955054793469', '7...   \n",
+       "2  ['5799347067982556520:5131280576272319091', '7...   \n",
+       "3  ['509660095530134768:-1', '5799347067982556520...   \n",
+       "4  ['5799347067982556520:9172976955054793469', '7...   \n",
        "\n",
        "                              predict_category_split  \\\n",
-       "0  [5799347067982556520, 509660095530134768, 5755...   \n",
-       "1         [5799347067982556520, 7908382889764677758]   \n",
-       "2  [5799347067982556520, 7258015885215914736, 790...   \n",
-       "3  [509660095530134768, 5799347067982556520, 7908...   \n",
-       "4         [5799347067982556520, 7908382889764677758]   \n",
+       "0  ['5799347067982556520', '509660095530134768', ...   \n",
+       "1     ['5799347067982556520', '7908382889764677758']   \n",
+       "2  ['5799347067982556520', '7258015885215914736',...   \n",
+       "3  ['509660095530134768', '5799347067982556520', ...   \n",
+       "4     ['5799347067982556520', '7908382889764677758']   \n",
        "\n",
        "                              predict_property_split  \\\n",
-       "0                              [9148482949976129397]   \n",
-       "1  [9172976955054793469, 1787573075717641245,9172...   \n",
-       "2  [5131280576272319091, 5131280576272319091, 513...   \n",
-       "3  [1787573075717641245,9148482949976129397, 9148...   \n",
-       "4         [9172976955054793469, 9172976955054793469]   \n",
+       "0                            ['9148482949976129397']   \n",
+       "1  ['9172976955054793469', '1787573075717641245,9...   \n",
+       "2  ['5131280576272319091', '5131280576272319091',...   \n",
+       "3  ['1787573075717641245,9148482949976129397', '9...   \n",
+       "4     ['9172976955054793469', '9172976955054793469']   \n",
        "\n",
-       "                          item_category_split  \\\n",
-       "0  [7908382889764677758, 5799347067982556520]   \n",
-       "1  [7908382889764677758, 5799347067982556520]   \n",
-       "2  [7908382889764677758, 5799347067982556520]   \n",
-       "3  [7908382889764677758, 5799347067982556520]   \n",
-       "4  [7908382889764677758, 5799347067982556520]   \n",
+       "                              item_category_split  \\\n",
+       "0  ['7908382889764677758', '5799347067982556520']   \n",
+       "1  ['7908382889764677758', '5799347067982556520']   \n",
+       "2  ['7908382889764677758', '5799347067982556520']   \n",
+       "3  ['7908382889764677758', '5799347067982556520']   \n",
+       "4  ['7908382889764677758', '5799347067982556520']   \n",
        "\n",
        "                                 item_property_split  \\\n",
-       "0  [2072967855524022579, 5131280576272319091, 263...   \n",
-       "1  [2072967855524022579, 5131280576272319091, 263...   \n",
-       "2  [2072967855524022579, 5131280576272319091, 263...   \n",
-       "3  [2072967855524022579, 5131280576272319091, 263...   \n",
-       "4  [2072967855524022579, 5131280576272319091, 263...   \n",
+       "0  ['2072967855524022579', '5131280576272319091',...   \n",
+       "1  ['2072967855524022579', '5131280576272319091',...   \n",
+       "2  ['2072967855524022579', '5131280576272319091',...   \n",
+       "3  ['2072967855524022579', '5131280576272319091',...   \n",
+       "4  ['2072967855524022579', '5131280576272319091',...   \n",
        "\n",
        "   item_category_split_count  item_property_split_count  \\\n",
        "0                          2                         22   \n",
@@ -1312,40 +1323,48 @@
        "4                          2                         2   \n",
        "\n",
        "   item_pred_property_score  item_pred_category_score_item%  \\\n",
-       "0                         0                             1.0   \n",
-       "1                         1                             1.0   \n",
-       "2                         1                             1.0   \n",
-       "3                         0                             1.0   \n",
-       "4                         1                             1.0   \n",
+       "0                         0                        6.666667   \n",
+       "1                         1                        6.666667   \n",
+       "2                         1                        6.666667   \n",
+       "3                         0                        6.666667   \n",
+       "4                         1                        6.666667   \n",
        "\n",
        "   item_pred_property_score_item%  item_pred_category_score_pred%  \\\n",
-       "0                        0.000000                        0.400000   \n",
-       "1                        0.045455                        1.000000   \n",
-       "2                        0.045455                        0.666667   \n",
-       "3                        0.000000                        0.400000   \n",
-       "4                        0.045455                        1.000000   \n",
+       "0                        0.000000                        3.333333   \n",
+       "1                        0.434783                        6.666667   \n",
+       "2                        0.434783                        5.000000   \n",
+       "3                        0.000000                        3.333333   \n",
+       "4                        0.434783                        6.666667   \n",
        "\n",
        "   item_pred_property_score_pred%  \n",
        "0                        0.000000  \n",
-       "1                        0.500000  \n",
-       "2                        0.333333  \n",
+       "1                        3.333333  \n",
+       "2                        2.500000  \n",
        "3                        0.000000  \n",
-       "4                        0.500000  "
+       "4                        3.333333  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.shape\n",
-    "df.head()"
+    "df.head()\n",
+    "#(478111, 52)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
