搜索几次特征

--- a/ALiMaMa/FeatureWithHistory.ipynb
+++ b/ALiMaMa/FeatureWithHistory.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -634,7 +636,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "test['is_trade'] = -1\n",
@@ -645,7 +649,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df['item_category_split'] = df.item_category_list.apply(lambda x: x.split(';'))\n",
@@ -662,7 +668,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#time\n",
@@ -698,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -707,7 +715,7 @@
        "(217586, 37)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -717,7 +725,7 @@
        "(278923, 37)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -739,8 +747,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -806,8 +815,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#user_brand_count user_city_count\n",
@@ -856,7 +867,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#item_occupation_count item_age_count item_gender_count\n",
@@ -925,7 +938,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#shop_score = (star + review_num * review_positive) * service * delivery * description\n",
@@ -940,7 +955,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train.context_page_id = train.context_page_id - min(train.context_page_id)"
@@ -949,7 +966,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#item_score = (sales + collected + pv)\n",
@@ -968,8 +987,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def pred_split(x):\n",
@@ -998,8 +1019,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train[\n",
@@ -1015,8 +1038,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def item_pred_category_score(x):\n",
@@ -1035,8 +1060,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train['pred_category_split_count'] = train.predict_category_split.apply(\n",
@@ -1062,8 +1089,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#item_hot user_hot shop_hot city_hot occupation_hot brand_hot\n",
@@ -1157,8 +1186,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#平均消费能力\n",
@@ -1195,6 +1226,7 @@
    "cell_type": "code",
    "execution_count": 70,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -1204,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {
     "scrolled": false
    },
@@ -1215,7 +1247,7 @@
        "(278923, 85)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1998,20 +2030,23 @@
        "4                         0.0                                    8.0  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "train.shape\n",
-    "train.head()"
+    "train.head()\n",
+    "#(278923, 85)(3:4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train.to_csv('train_preprocessing34.csv', index=False)\n",
