--- a/ALiMaMa/FeatureWithHistory.ipynb
+++ b/ALiMaMa/FeatureWithHistory.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -1685,7 +1683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -1696,7 +1694,7 @@
        "(496458, 7)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1801,7 +1799,7 @@
        "4  2018-09-21 09:51:55           0              0              0  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1849,10 +1847,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#user_item、user_shop上下次浏览时间、时间差\n",
@@ -1899,10 +1895,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#user上下次浏览时间、时间差\n",
@@ -1941,10 +1935,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#user_item、user_shop时间差\n",
@@ -2022,10 +2014,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#user第一次出现时间差\n",
@@ -2098,9 +2088,56 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#最后一次点击\n",
+    "from datetime import datetime, timedelta\n",
+    "\n",
+    "user_last = train.groupby(\n",
+    "    ['user_id'], as_index=False)['user_count'].agg({\n",
+    "        'max_click': 'max'\n",
+    "    })\n",
+    "user_item_last = train.groupby(\n",
+    "    ['user_id', 'item_id'], as_index=False)['user_item_num'].agg({\n",
+    "        'max_user_item_click':\n",
+    "        'max'\n",
+    "    })\n",
+    "\n",
+    "train = train.merge(user_last, on=['user_id'], how='left')\n",
+    "train['is_last_click'] = train.apply(\n",
+    "    lambda x: 1 if x.max_click == x.user_count else 0, axis=1)\n",
+    "train = train.merge(user_item_last, on=['user_id', 'item_id'], how='left')\n",
+    "train['is_last_user_item_click'] = train.apply(\n",
+    "    lambda x: 1 if x.max_user_item_click == x.user_item_num else 0, axis=1)\n",
+    "\n",
+    "user_last_time = train[['user_id', 'user_count', 'time']]\n",
+    "user_last_time.columns = ['user_id', 'max_click', 'max_click_time']\n",
+    "train = train.merge(user_last_time, on=['user_id', 'max_click'], how='left')\n",
+    "user_item_last_time = train[['user_id', 'item_id', 'user_item_num', 'time']]\n",
+    "user_item_last_time.columns = ['user_id', 'item_id', 'max_user_item_click', 'max_user_item_click_time']\n",
+    "train = train.merge(user_item_last_time, on=['user_id', 'item_id', 'max_user_item_click'], how='left')\n",
+    "\n",
+    "def last_time_sub(x):\n",
+    "    return (\n",
+    "        datetime.strptime(x.max_click_time, '%Y-%m-%d  %H:%M:%S') - datetime.strptime(\n",
+    "            x.time, '%Y-%m-%d  %H:%M:%S')).seconds\n",
+    "\n",
+    "train['max_click_time_sub'] = train.apply(last_time_sub, axis=1)\n",
+    "\n",
+    "def last_time_sub(x):\n",
+    "    return (\n",
+    "        datetime.strptime(x.max_user_item_click_time, '%Y-%m-%d  %H:%M:%S') - datetime.strptime(\n",
+    "            x.time, '%Y-%m-%d  %H:%M:%S')).seconds\n",
+    "\n",
+    "train['max_user_item_click_time_sub'] = train.apply(last_time_sub, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -2112,9 +2149,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -2123,7 +2160,7 @@
        "(278894, 168)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3572,12 +3609,13 @@
        "4                             0  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# train = train.iloc[:, :129]\n",
     "train.shape\n",
     "train.head()\n",
     "#(278894, 85)(3:4)\n",
@@ -3586,50 +3624,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#最后一次点击\n",
-    "from datetime import datetime, timedelta\n",
+    "#重新处理item_score\n",
     "\n",
-    "user_last = train.groupby(\n",
-    "    ['user_id'], as_index=False)['user_count'].agg({\n",
-    "        'max_click': 'max'\n",
-    "    })\n",
-    "user_item_last = train.groupby(\n",
-    "    ['user_id', 'item_id'], as_index=False)['user_item_num'].agg({\n",
-    "        'max_user_item_click':\n",
-    "        'max'\n",
-    "    })\n",
+    "train['item_score'] = (\n",
+    "    train.item_sales_level + train.item_collected_level * train.item_pv_level)\n",
+    "train['item_score2'] = (\n",
+    "    train.item_sales_level + train.item_collected_level * train.item_pv_level\n",
+    ") / (train.item_price_level + 2)\n",
+    "train['item_score3'] = (\n",
+    "    (train.item_sales_level + train.item_collected_level * train.item_pv_level\n",
+    "     ) / (train.item_price_level + 2)) / (train.context_page_id + 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#good_features\n",
+    "origin = [\n",
+    "    'item_price_level', 'item_sales_level', 'item_collected_level',\n",
+    "    'item_pv_level', 'user_gender_id', 'user_age_level', 'user_occupation_id',\n",
+    "    'user_star_level', 'context_page_id', 'shop_review_num_level',\n",
+    "    'shop_review_positive_rate', 'shop_star_level', 'shop_score_service',\n",
+    "    'shop_score_delivery', 'shop_score_description'\n",
+    "]\n",
     "\n",
-    "train = train.merge(user_last, on=['user_id'], how='left')\n",
-    "train['is_last_click'] = train.apply(\n",
-    "    lambda x: 1 if x.max_click == x.user_count else 0, axis=1)\n",
-    "train = train.merge(user_item_last, on=['user_id', 'item_id'], how='left')\n",
-    "train['is_last_user_item_click'] = train.apply(\n",
-    "    lambda x: 1 if x.max_user_item_click == x.user_item_num else 0, axis=1)\n",
+    "predictors = [\n",
+    "    'item_category_split_count', 'item_property_split_count', 'day', 'hour',\n",
+    "    'minute', 'user_shop_count', 'user_item_count', 'user_context_count',\n",
+    "    'user_shop_trade_count', 'user_item_trade_count',\n",
+    "    'user_context_trade_count', 'user_brand_count', 'user_city_count',\n",
+    "    'user_brand_trade_count', 'user_city_trade_count', 'item_occupation_count',\n",
+    "    'item_age_count', 'item_gender_count', 'item_occupation_trade_count',\n",
+    "    'item_age_trade_count', 'item_gender_trade_count', 'shop_score',\n",
+    "    'item_score', 'item_score2', 'item_score3', 'pred_category_split_count',\n",
+    "    'pred_property_split_count', 'item_pred_category_score',\n",
+    "    'item_pred_property_score', 'item_pred_category_score_item%',\n",
+    "    'item_pred_property_score_item%', 'item_pred_category_score_pred%',\n",
+    "    'item_pred_property_score_pred%', 'item_hot', 'user_hot', 'shop_hot',\n",
+    "    'brand_hot', 'occupation_hot', 'city_hot', 'item_trade_hot',\n",
+    "    'user_trade_hot', 'shop_trade_hot', 'brand_trade_hot',\n",
+    "    'occupation_trade_hot', 'city_trade_hot', 'user_sell_power',\n",
+    "    'user_sell_power_mean', 'user_sell_power_mean_item_minus',\n",
+    "    'user_sell_trade_power', 'user_sell_trade_power_mean',\n",
+    "    'user_sell_trade_power_mean_item_minus', 'yesterday', 'yesterhour',\n",
+    "    'user_day_query', 'user_yesterday_query', 'user_hour_query',\n",
+    "    'user_yesterhour_query', 'user_minute_query', 'item_day_query',\n",
+    "    'item_hour_query', 'user_item_day_query', 'user_item_hour_query',\n",
+    "    'item_minute_query', 'user_item_minute_query', 'user_count',\n",
+    "    'user_day_count', 'user_hour_count', 'user_minute_count', 'min_time',\n",
+    "    'user_is_his', 'item_is_his', 'brand_is_his', 'user_is_trade_his',\n",
+    "    'item_is_trade_his', 'brand_is_trade_his', 'item_trade_percent',\n",
+    "    'brand_trade_percent', 'user_trade_percent', 'occupation_trade_percent',\n",
+    "    'is_home', 'shop_item_count', 'brand_item_count', 'city_brand_count',\n",
+    "    'city_item_count', 'shop_item_count_his', 'brand_item_count_his',\n",
+    "    'city_brand_count_his', 'city_item_count_his', 'item_id_idx',\n",
+    "    'user_id_idx', 'shop_id_idx', 'item_brand_id_idx', 'item_city_id_idx',\n",
+    "    'next_time_sub', 'last_time_sub', 'user_item_num', 'user_shop_num',\n",
+    "    'user_item_day_num', 'user_shop_day_num', 'user_item_next_time_sub',\n",
+    "    'user_item_last_time_sub', 'user_shop_next_time_sub',\n",
+    "    'user_shop_last_time_sub', 'user_count_first_time_sub',\n",
+    "    'user_item_count_first_time_sub', 'user_shop_count_first_time_sub',\n",
+    "    'is_last_click', 'is_last_user_item_click', 'max_click_time_sub',\n",
+    "    'max_user_item_click_time_sub'\n",
+    "]\n",
     "\n",
-    "user_last_time = train[['user_id', 'user_count', 'time']]\n",
-    "user_last_time.columns = ['user_id', 'max_click', 'max_click_time']\n",
-    "train = train.merge(user_last_time, on=['user_id', 'max_click'], how='left')\n",
-    "user_item_last_time = train[['user_id', 'item_id', 'user_item_num', 'time']]\n",
-    "user_item_last_time.columns = ['user_id', 'item_id', 'max_user_item_click', 'max_user_item_click_time']\n",
-    "train = train.merge(user_item_last_time, on=['user_id', 'item_id', 'max_user_item_click'], how='left')\n",
+    "rubbish_features = [\n",
+    "    'user_id_idx', 'item_id_idx', 'item_hour_query',\n",
+    "    'item_pred_category_score_pred%', 'item_brand_id_idx', 'brand_trade_hot',\n",
+    "    'brand_trade_hot', 'shop_id_idx', 'min_time', 'item_age_count',\n",
+    "    'brand_trade_percent'\n",
+    "]\n",
     "\n",
-    "def last_time_sub(x):\n",
-    "    return (\n",
-    "        datetime.strptime(x.max_click_time, '%Y-%m-%d  %H:%M:%S') - datetime.strptime(\n",
-    "            x.time, '%Y-%m-%d  %H:%M:%S')).seconds\n",
-    "\n",
-    "train['max_click_time_sub'] = train.apply(last_time_sub, axis=1)\n",
-    "\n",
-    "def last_time_sub(x):\n",
-    "    return (\n",
-    "        datetime.strptime(x.max_user_item_click_time, '%Y-%m-%d  %H:%M:%S') - datetime.strptime(\n",
-    "            x.time, '%Y-%m-%d  %H:%M:%S')).seconds\n",
-    "\n",
-    "train['max_user_item_click_time_sub'] = train.apply(last_time_sub, axis=1)"
+    "target = ['is_trade']"
    ]
   },
   {
@@ -3678,10 +3751,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictors = list(set(origin + predictors))\n",
+    "predictors = list(set(predictors) - set(rubbish_features))\n",
+    "train[predictors].to_csv('train_preprocessing34_good_features.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "train.to_csv('train_preprocessing34.csv', index=False)\n",
